put logo in middle of index.html and fixed white gap on contact us

--- a/CSS/ContactUs.css
+++ b/CSS/ContactUs.css
@@ -40,7 +40,7 @@ nav ul li a {
 
 .navBar {
     width: 100vw;
-    height: 25vh;
+    height: 20vh;
     margin-top: -1%;
 }
 
